Fixed Page titles, because they were interpreted as E-Mail addresses (possible Vulnerability or attraction thereof)

--- a/www/templates/tpleditor.html
+++ b/www/templates/tpleditor.html
@@ -59,7 +59,7 @@
       </TR>
       <TR>
          <TD align="left">Page-Title:</TD>
-         <TD align="left"><INPUT class="text" size="30" name="frm[page_title]" value="{$tpleditor_frm.page_title}">@zorg.ch</TD>
+         <TD align="left"><INPUT class="text" size="30" name="frm[page_title]" value="{$tpleditor_frm.page_title}"> - zorg.ch</TD>
          <TD>&nbsp;</TD>
          <TD align="left">by {$tpleditor_frm.update_user|username}</TD>
       </TR>
